--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.0.0",
     "@mantine/core": "7.17.8",
     "@mantine/hooks": "7.17.8",
     "@mantine/notifications": "7.17.8",
@@ -43,6 +44,7 @@
     "@types/react-dom": "19.1.9",
     "@vitejs/plugin-react": "5.0.3",
     "chart.js": "4.5.0",
+    "cypress": "^15.2.0",
     "dayjs": "1.11.18",
     "esbuild": "0.25.10",
     "postcss": "8.5.6",
