--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@vitejs/plugin-react": "5.0.3",
     "chart.js": "4.5.0",
     "cypress": "^15.2.0",
+    "cypress-file-upload": "^5.0.8",
     "dayjs": "1.11.18",
     "esbuild": "0.25.10",
     "postcss": "8.5.6",
