--- a/.github/workflows/test-suites.yml
+++ b/.github/workflows/test-suites.yml
@@ -1,30 +1,33 @@
 name: Cypress Tests
 
+# When to run this workflow
+
+# When to run this workflow
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" ]    # Runs on push to main branch
   pull_request:
-    branches: [ "main" ]
-
+    branches: [ "main" ]    # Runs on PR to main branch
 jobs:
   cypress-run:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest   # GitHub provides Linux VM
 
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+   steps:
+   
+  - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
+  - name: Install dependencies
+    run: npm install
 
-      - name: Install dependencies
-        run: npm install
+  - name: Make Cypress binary executable
+    run: chmod +x node_modules/.bin/cypress
 
+
+      # Step 4: Run Cypress tests
       - name: Run Cypress tests
-        run: npx cypress run --browser chrome --headless
+        run: npx cypress run --spec "cypress/e2e/login.cy.js, cypress/e2e/addtocart.cy.js, cypress/e2e/checkout.cy.js"
 
+      # (Optional) Upload screenshots if tests fail
       - name: Upload Cypress screenshots
         if: failure()
         uses: actions/upload-artifact@v4
@@ -32,8 +35,9 @@ jobs:
           name: cypress-screenshots
           path: cypress/screenshots
 
+      # (Optional) Upload Cypress videos always
       - name: Upload Cypress videos
-        if: failure()
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-videos
