--- a/.github/workflows/test-suites.yml
+++ b/.github/workflows/test-suites.yml
@@ -33,9 +33,17 @@ jobs:
           path: cypress/screenshots
 
       # (Optional) Upload Cypress videos always
-      - name: Upload Cypress videos
-        if: always()
-        uses: actions/upload-artifact@v4
+      - uses: actions/checkout@v4
         with:
-          name: cypress-videos
-          path: cypress/videos
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: SonarSource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      # If you wish to fail your job when the Quality Gate is red, uncomment the
+      # following lines. This would typically be used to fail a deployment.
+      # - uses: SonarSource/sonarqube-quality-gate-action@v1
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
