--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,14 @@
-sonar.projectKey=Code-Quality-Check
+sonar.projectKey=Moizahmad496_Medplum---Healthcare-Automation-Project-
+sonar.organization=moizahmad496
+
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=Medplum---Healthcare-Automation-Project-
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
